[gd_scene load_steps=7 format=2]

[ext_resource path="res://entities/fluffisprout/sprite/fluffisprout.png" type="Texture" id=1]
[ext_resource path="res://entities/fluffisprout/fluffisprout.gd" type="Script" id=2]
[ext_resource path="res://entities/fluffi_node_base.tscn" type="PackedScene" id=3]
[ext_resource path="res://other/fluffi_face.tres" type="SpriteFrames" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

[node name="fluffisprout" type="StaticBody2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource( 2 )

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -40 )
frames = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="sprite"]
position = Vector2( 12, -4 )
frames = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="info_panel" type="TextureButton" parent="."]
margin_left = -25.0
margin_top = -55.0
margin_right = 23.0
margin_bottom = -3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fluffi_node_base" parent="." instance=ExtResource( 3 )]
[connection signal="pressed" from="info_panel" to="." method="_on_info_panel_pressed"]
